# auto-splitting-ide

./: .gitignore  Cargo.toml  Dioxus.toml  README.md
.github/workflows/: before_deploy.sh  build.sh  build.yml
assets/: main.css
src/: main.rs  runtime_thread.rs  timer.rs
src/hooks/: mod.rs  transparency.rs
src/ui/: central_panel.rs  code_editor.js  code_editor.rs  divider.rs  left_side_bar.rs  mod.rs  panel.rs  right_side_bar.rs  side_bar.rs  source_panel.rs  toggle.rs  variables.rs
src/ui/swapy/: mod.rs  swapy.js  use_swapy.js
src/ui/widgets/: auto_splitter_control.rs  logs.rs  mod.rs  processes.rs  settings_gui.rs  settings_map.rs  statistics.rs  timer_info.rs
