[package]
name = "auto-splitting-ide"
version = "0.1.0"
authors = ["Christopher Serr <christopher.serr@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
livesplit-auto-splitting = { git = "https://github.com/LiveSplit/livesplit-core", features = ["debugger-support"] }
dioxus = { version = "0.7.1", features = [] }
window-vibrancy = "0.7.1"
rfd = { version = "0.15.2", default-features = false }
indexmap = "2.7.1"
time = { version = "0.3.36", features = ["local-offset"] }
dioxus-material-icons = "4.0.1"
byte-unit = "5.0.3"
notify = "8.0.0"
mime_guess = "2.0.5"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Graphics_Gdi", "Win32_Foundation"] }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
strip = true
